fix scrollbar for mobile

--- a/webrootSrc/css/traefik-admin.css
+++ b/webrootSrc/css/traefik-admin.css
@@ -53,7 +53,6 @@ input {
 
 .modal-content {
   background-color:var(--primary-bg-color);
-  overflow-y:hidden !important;
 }
 
 .modal-content .add-btn {
